overflow possible fix7

--- a/src/components/Blocks/Lifes.css
+++ b/src/components/Blocks/Lifes.css
@@ -2,11 +2,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 50px;
+	margin-top: 50px;
 	z-index: 10;
 	overflow: visible !important;
 }
 .life {
 	width: 50px;
 	height: 50px;
+}
+.emptyHeart {
+	opacity: 0.3;
 }
